<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Quester</string>

    <!-- Строки, используемые для фрагментов для навигации -->
    <string name="character_fragment_label">Character</string>
    <string name="list_fragment_label">Lists</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">Lorem ipsum</string>

    <!-- Строки, связанные с входом и регистрацией -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="sign_up_complete">"Sign up complete"</string>
    <string name="sign_up_failed">"Sign up failed"</string>
    <string name="sign_in_complete">"Sign in complete"</string>
    <string name="sign_in_failed">"Sign in failed"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_confirm">Passwords do not match</string>
    <string name="username_requirements">For example, Jacob</string>
    <string name="email_requirements">For example, jacob@gmail.com</string>
    <string name="password_requirements">Password must be >5 characters</string>
    <string name="password_confirm_requirements">Passwords must match</string>

    <!-- Строки, связанные с нижней панелью навигации -->
    <string name="tasks_menu_item">Tasks</string>
    <string name="character_menu_item">Character</string>
    <string name="settings_menu_item">Settings</string>
    <string name="sign_up_failed_email">The email address is already in use by another account</string>
    <string name="sign_in_failed_email">The user with this email does not exist</string>
    <string name="sign_in_failed_password">The password is invalid</string>
    <string name="auth_failed_network">No internet connection</string>
    <string name="sign_up_failed_email_format">The email address is badly formatted</string>
    <string name="get_data_error">Failed to retrieve data</string>

    <!-- Create list alert dialog -->
    <string name="create_list_hint">List name</string>
    <string name="create_list_dialog_title">Enter the name of the list</string>
    <string name="ok_dialog_button" translatable="false">OK</string>
    <string name="cancel_dialog_button">Cancel</string>

    <string name="create_list_tab">+ Create list</string>
    <string name="create_task_dialog_title">Enter the name of the task</string>
    <string name="create_task_hint">Task name</string>
    <string name="appbar_menu_delete_list">Delete list</string>
    <string name="appbar_menu_rename_list">Change name</string>
    <string name="task_delete">Delete task</string>
    <string name="edit_list_dialog_title">Change the name of the list</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="account_settings">Actions with the account</string>
    <string name="sign_out_settings">Sign out</string>
    <string name="sign_out_summary">Sign out of your account</string>
    <string name="delete_account_settings">Delete account</string>
    <string name="delete_account_summary">Deletion of all data without possibility of recovery</string>
    <string name="progress_reset_settings">Progress reset</string>
    <string name="progress_reset_summary">Resetting your character\'s progress, including task lists and tasks</string>
    <string name="progress_reset_successful">Progress has been successfully reset</string>
    <string name="delete_account_successful">Account deleted successfully! Please restart the application!</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="skill_fragment_label">Skill</string>
    <string name="create_skill_dialog_title">Enter the name of the skill</string>
    <string name="create_skill_hint">Skill name</string>
    <string name="level_string">Level: %1$d</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>
    <string name="yes_dialog_button">Yes</string>
    <string name="no_dialog_button">No</string>
    <string name="delete_task_dialog_title">Are you sure you want to delete this task?</string>
    <string name="percent_string" translatable="false">%1$d%%</string>
    <string name="skill_delete">Delete a skill</string>
    <string name="skill_save">Save the skill</string>
    <string name="no_connection_header_text">No Internet connection</string>
    <string name="no_connection_text">Please check the Wi-Fi or mobile network connection</string>
    <string name="leaderboard_fragment_label">Leaderboard</string>
    <string name="leaderboard_string" translatable="false">№%1$d %2$s</string>
    <string name="delete_list_dialog_title">Are you sure you want to delete this list?</string>
    <string name="delete_skill_dialog_title">Are you sure you want to remove this skill?</string>
    <string name="skills_character_label">Skills</string>
    <string name="enum_action_create">created</string>
    <string name="enum_action_edit">edited</string>
    <string name="enum_action_delete">deleted</string>
    <string name="enum_action_mark_complete">marked accomplished</string>
    <string name="enum_object_task">task</string>
    <string name="enum_object_skill">skill</string>
    <string name="enum_object_list">list</string>
    <string name="enum_object_account">account</string>
    <string name="log_string">User %1$s %2$s %3$s "%4$s" \n\n%5$s %6$s</string>
    <string name="log_fragment_label">Logs</string>
    <string name="appbar_menu_filter">Filter</string>
    <string name="datepicker_select_date">Select date</string>
    <string name="appbar_menu_search">Search user</string>
    <string name="sign_in_failed_account_deleted">Your account has been deleted</string>
    <string name="user_profile_fragment_label">User profile</string>
    <string name="user_profile_menu_item">Profile</string>
    <string name="add_skill_dialog_title">Select the skill you want to add</string>
    <string name="appbar_menu_block_profile">Block</string>
    <string name="text_achievements">Achievements</string>
    <string name="button_text_all_achievements">All achievements</string>
    <string name="add_skill_hint">Skill</string>
    <string name="error_add_skill">You already have this skill!</string>
    <string name="task_complete">Task complete</string>
    <string name="button_text_add_skill">Add skill</string>
    <string name="text_difficulty">Difficulty</string>
    <string name="text_user_blocked">User is blocked</string>
    <string name="confirm_title">Confirmation</string>
    <string name="block_user_dialog_text">Are you sure you want to block this user?</string>
    <string name="sign_in_failed_account_blocked">Your account has been blocked</string>
    <string name="blocked_user_dialog_text">Your account has been blocked</string>
    <string name="blocked_title">Blocking</string>
    <string name="achievement_description_string">Upgrade the \"%1$s\" skill to level %2$d</string>
    <string name="no_achievements_header">No achievements yet</string>
    <string name="no_achievements_text">Increase your skill level to gain achievements</string>
    <string name="no_skills_header">No skills yet</string>
    <string name="no_skills_text">Add skills by clicking on the + icon</string>
    <string name="no_list_header">You don\'t have task lists yet</string>
    <string name="no_list_text">You can add a list by clicking the \"+ Create list\" button</string>
    <string name="no_task_text">You can add a task by clicking on the \"+\" button</string>
    <string name="no_task_header">There are no tasks on this list yet</string>
    <string name="email_title_settings">Contact Us</string>
    <string name="email_message_summary">Send us an email to report a problem or suggest an idea for improvement</string>
    <string name="info_settings">Information</string>
    <string name="send_email_intent">Send an email</string>
    <string name="mark_task_complete_dialog_title">Are you sure you want to mark the task done?</string>
    <string name="mark_task_complete_dialog_message">This action cannot be undone!</string>
    <string name="achievements_label">Achievements</string>
</resources>