<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_settings">

        <Preference
            app:key="signout"
            app:title="@string/sign_out_settings"
            app:summary="@string/sign_out_summary"/>

        <Preference
            app:key="delete"
            app:title="@string/delete_account_settings"
            app:summary="@string/delete_account_summary"/>

        <Preference
            app:key="reset"
            app:title="@string/progress_reset_settings"
            app:summary="@string/progress_reset_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/info_settings">

        <Preference
            app:key="email"
            app:title="@string/email_title_settings"
            app:summary="@string/email_message_summary"/>

    </PreferenceCategory>

</PreferenceScreen>