<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/characterFragment">
    <fragment
        android:id="@+id/characterFragment"
        android:name="ru.net2fox.quester.ui.character.CharacterFragment"
        android:label="@string/character_fragment_label"
        tools:layout="@layout/fragment_character" >
        <action
            android:id="@+id/action_characterFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_characterFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_characterFragment_to_skillFragment"
            app:destination="@id/skillFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="ru.net2fox.quester.ui.list.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_taskDetailedFragment"
            app:destination="@id/taskDetailedFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_listFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="ru.net2fox.quester.ui.auth.signin.SignInFragment"
        android:label="@string/action_sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_signInFragment_to_characterFragment"
            app:destination="@id/characterFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="ru.net2fox.quester.ui.auth.signup.SignUpFragment"
        android:label="@string/action_sign_up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/taskDetailedFragment"
        android:name="ru.net2fox.quester.ui.tasks.taskdetailed.TaskDetailedFragment"
        android:label="Задача"
        tools:layout="@layout/fragment_task_detailed">
        <argument
            android:name="taskId"
            app:argType="string" />
        <argument
            android:name="listId"
            app:argType="string" />
        <action
            android:id="@+id/action_taskDetailedFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ru.net2fox.quester.ui.settings.SettingsFragment"
        android:label="@string/settings_fragment_label">
        <action
            android:id="@+id/action_settingsFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/skillFragment"
        android:name="ru.net2fox.quester.ui.skill.SkillFragment"
        android:label="@string/skill_fragment_label">
        <argument
            android:name="skillId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/leaderboardFragment"
        android:name="ru.net2fox.quester.ui.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard_fragment_label"
        tools:layout="@layout/fragment_leaderboard" >
        <action
            android:id="@+id/action_leaderboardFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>